trunk/Archive2/55/6f4c305318194c/output
main.cpp:13:3: error: static_assert failed "Template argument Td is not derived from BaseT"
  static_assert(std::is_base_of<BaseT, Td>::value, "Template argument Td is not derived from BaseT");
  ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:25:31: note: in instantiation of template class 'Extractor<int, double, int, void>' requested here
  Extractor<int, double, int> dummy2;
                              ^
1 error generated.
